--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="skill.css" />
     <!-- <style>
       body {
         background-color: powderblue;
@@ -394,16 +395,16 @@
 
     <!-- HTML Forms -->
 
-    <!-- <form>
+    <form>
       <label for="fname">First name:</label><br />
       <input type="text" id="fname" name="fname" /><br />
       <label for="lname">Last name:</label><br />
       <input type="text" id="lname" name="lname" />
-    </form> -->
+    </form>
 
     <!-- Radio Buttons -->
 
-    <!-- <form>
+    <form>
       <input type="radio" id="html" name="fav_language" value="HTML" />
       <label for="html">HTML</label><br />
       <input type="radio" id="css" name="fav_language" value="CSS" />
@@ -415,28 +416,28 @@
         value="JavaScript"
       />
       <label for="javascript">JavaScript</label>
-    </form> -->
+    </form>
 
     <!-- Checkboxes -->
 
-    <!-- <form>
+    <form>
       <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" />
       <label for="vehicle1"> I have a bike</label><br />
       <input type="checkbox" id="vehicle2" name="vehicle2" value="Car" />
       <label for="vehicle2"> I have a car</label><br />
       <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat" />
       <label for="vehicle3"> I have a boat</label>
-    </form> -->
+    </form>
 
     <!-- Submit Button -->
 
-    <!-- <form action="/action_page.php">
+    <form action="/action_page.php">
       <label for="fname">First name:</label><br />
       <input type="text" id="fname" name="fname" value="John" /><br />
       <label for="lname">Last name:</label><br />
       <input type="text" id="lname" name="lname" value="Doe" /><br /><br />
       <input type="submit" value="Submit" />
-    </form> -->
+    </form>
 
     <!-- HTML Semantic Elements -->
 
